--- a/SimpleECS.Demos/imgui.ini
+++ b/SimpleECS.Demos/imgui.ini
@@ -1,12 +1,61 @@
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
+Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=348,185
-Size=509,434
+Pos=0,19
+Size=168,701
+Collapsed=0
+DockId=0x00000002,0
 
 [Window][Hello, world!]
+Pos=170,557
+Size=1110,163
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][About Dear ImGui]
 Pos=60,60
-Size=195,202
+Size=570,126
+Collapsed=0
+
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1280,720
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=60,60
+Size=500,440
+Collapsed=0
+
+[Window][Example: Simple layout/left pane_AED60EF8]
+IsChild=1
+Size=150,386
+
+[Window][Example: Auto-resizing window]
+Pos=584,318
+Size=451,267
+Collapsed=0
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=912,19
+Size=368,536
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][Example: Console]
+Pos=308,265
+Size=520,468
+Collapsed=0
+
+[Docking][Data]
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1280,701 Split=X
+  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=168,701 HiddenTabBar=1 Selected=0xE87781F4
+  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=1110,701 Split=Y
+    DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=1264,536 Split=X
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=740,509 CentralNode=1
+      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=368,509 HiddenTabBar=1 Selected=0x20E3C5EA
+    DockNode    ID=0x00000004 Parent=0x00000007 SizeRef=1264,163 HiddenTabBar=1 Selected=0xD00C9CD4
 
